--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,3 +2,10 @@
   padding-left: 10%;
   padding-right: 10%;
 }
+
+@media (max-width: 480px) {
+  .boss-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
