--- a/components/Heading/heading.module.css
+++ b/components/Heading/heading.module.css
@@ -5,3 +5,31 @@
 .subTitle {
   font-weight: 200;
 }
+
+/* Font Weight */
+
+.fwLight {
+  font-weight: 200;
+}
+
+.fwMedium {
+  font-weight: 500;
+}
+
+.fwDark {
+  font-weight: 900;
+}
+
+/* Font Size */
+
+.fsSmall {
+  font-size: 1.5rem;
+}
+
+.fsMedium {
+  font-size: 2.5rem;
+}
+
+.fsLarge {
+  font-size: 2rem;
+}
