--- a/components/Article/article.module.css
+++ b/components/Article/article.module.css
@@ -168,6 +168,29 @@
   margin-top: 2rem;
 }
 
+.gameActionButton {
+  background-color: green;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 200;
+  padding: 10px 20px 10px 20px;
+  border-radius: 30px;
+  outline: none;
+  border: none;
+  margin-top: 3rem;
+  animation: pulse 0.8s infinite alternate;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 @media (max-width: 480px) {
   .syntaxInfo {
     flex-direction: column;
