--- a/components/Article/article.module.css
+++ b/components/Article/article.module.css
@@ -134,6 +134,7 @@
   border-radius: 30px;
   outline: none;
   border: none;
+  box-shadow: -4px 5px 0px 1px black;
 }
 
 .startGameButton:hover {
@@ -179,6 +180,7 @@
   border: none;
   margin-top: 3rem;
   animation: pulse 0.8s infinite alternate;
+  box-shadow: -4px 5px 0px 1px black;
 }
 
 @keyframes pulse {
