--- a/components/Article/article.module.css
+++ b/components/Article/article.module.css
@@ -41,8 +41,8 @@
 
 .syntaxImg {
   border-radius: 10px;
-  width: 31rem;
-  height: 12rem;
+  width: 100%;
+  height: auto;
 }
 
 .useCase1 {
@@ -193,14 +193,60 @@
   }
 }
 
+/* For mobile phones */
+
 @media (max-width: 480px) {
   .syntaxInfo {
     flex-direction: column;
   }
 
   .syntaxImg {
-    width: 16rem;
-    height: 6rem;
+    width: 100%;
+    height: auto;
+  }
+
+  .inputRefVideo {
+    width: 100%;
+  }
+
+  .list {
+    font-size: 0.8rem;
+  }
+
+  .usages {
+    font-size: 0.8rem;
+  }
+
+  .coverImageContainer {
+    width: 100%;
+  }
+
+  .useCase2 {
+    border-radius: 7px;
+  }
+
+  .gameHeadingContainer {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .startGameButton {
+    font-size: 0.8rem;
+  }
+  .reactionGrid {
+    gap: 5px;
+  }
+}
+
+/* For tablets */
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .syntaxInfo {
+    flex-direction: column;
+  }
+
+  .syntaxImg {
+    width: 100%;
+    height: auto;
   }
 
   .inputRefVideo {
