--- a/components/ScrollToNav/scrolltonav.module.css
+++ b/components/ScrollToNav/scrolltonav.module.css
@@ -24,6 +24,7 @@
   text-align: right;
   padding: 0.5rem;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .scrollToNav button:hover {
@@ -36,6 +37,7 @@
   position: fixed;
   right: 0;
   top: 40%;
+  cursor: pointer;
   padding: 1rem;
   border: 1px solid black;
   border-right: none;
